@@ -10,6 +10,7 @@ import (
 	"github.com/elastic/beats/libbeat/logp"
 	"github.com/elastic/beats/libbeat/monitoring"
 	"github.com/elastic/beats/libbeat/publisher/beat"
+	"github.com/elastic/beats/libbeat/testing"
 	"github.com/elastic/beats/metricbeat/mb"
 
 	"github.com/mitchellh/hashstructure"
@@ -146,6 +147,11 @@ func (mw *Wrapper) Hash() uint64 {
 	return mw.configHash
 }
 
+// MetricSets return the list of metricsets of the module
+func (mw *Wrapper) MetricSets() []*metricSetWrapper {
+	return mw.metricSets
+}
+
 // metricSetWrapper methods
 
 func (msw *metricSetWrapper) run(done <-chan struct{}, out chan<- beat.Event) {
@@ -188,7 +194,7 @@ func (msw *metricSetWrapper) run(done <-chan struct{}, out chan<- beat.Event) {
 // startPeriodicFetching performs an immediate fetch for the MetricSet then it
 // begins a continuous timer scheduled loop to fetch data. To stop the loop the
 // done channel should be closed.
-func (msw *metricSetWrapper) startPeriodicFetching(reporter *eventReporter) {
+func (msw *metricSetWrapper) startPeriodicFetching(reporter reporter) {
 	// Fetch immediately.
 	msw.fetch(reporter)
 
@@ -197,7 +203,7 @@ func (msw *metricSetWrapper) startPeriodicFetching(reporter *eventReporter) {
 	defer t.Stop()
 	for {
 		select {
-		case <-reporter.done:
+		case <-reporter.Done():
 			return
 		case <-t.C:
 			msw.fetch(reporter)
@@ -208,7 +214,7 @@ func (msw *metricSetWrapper) startPeriodicFetching(reporter *eventReporter) {
 // fetch invokes the appropriate Fetch method for the MetricSet and publishes
 // the result using the publisher client. This method will recover from panics
 // and log a stack track if one occurs.
-func (msw *metricSetWrapper) fetch(reporter *eventReporter) {
+func (msw *metricSetWrapper) fetch(reporter reporter) {
 	switch fetcher := msw.MetricSet.(type) {
 	case mb.EventFetcher:
 		msw.singleEventFetch(fetcher, reporter)
@@ -221,14 +227,14 @@ func (msw *metricSetWrapper) fetch(reporter *eventReporter) {
 	}
 }
 
-func (msw *metricSetWrapper) singleEventFetch(fetcher mb.EventFetcher, reporter *eventReporter) {
-	reporter.startFetchTimer()
+func (msw *metricSetWrapper) singleEventFetch(fetcher mb.EventFetcher, reporter reporter) {
+	reporter.StartFetchTimer()
 	event, err := fetcher.Fetch()
 	reporter.ErrorWith(err, event)
 }
 
-func (msw *metricSetWrapper) multiEventFetch(fetcher mb.EventsFetcher, reporter *eventReporter) {
-	reporter.startFetchTimer()
+func (msw *metricSetWrapper) multiEventFetch(fetcher mb.EventsFetcher, reporter reporter) {
+	reporter.StartFetchTimer()
 	events, err := fetcher.Fetch()
 	if len(events) == 0 {
 		reporter.ErrorWith(err, nil)
@@ -239,8 +245,8 @@ func (msw *metricSetWrapper) multiEventFetch(fetcher mb.EventsFetcher, reporter 
 	}
 }
 
-func (msw *metricSetWrapper) reportingFetch(fetcher mb.ReportingMetricSet, reporter *eventReporter) {
-	reporter.startFetchTimer()
+func (msw *metricSetWrapper) reportingFetch(fetcher mb.ReportingMetricSet, reporter reporter) {
+	reporter.StartFetchTimer()
 	fetcher.Fetch(reporter)
 }
 
@@ -259,7 +265,29 @@ func (msw *metricSetWrapper) String() string {
 		msw.module.Name(), msw.Name(), msw.Host())
 }
 
+func (msw *metricSetWrapper) Test(d testing.Driver) {
+	done := make(chan struct{})
+	d.Run(msw.Name(), func(d testing.Driver) {
+		// ReportingMetricSet would hang out forever, perhaps we can add a timeout based test in the future
+		if _, ok := msw.MetricSet.(mb.ReportingMetricSet); ok {
+			d.Warn("test", "metricset doesn't support testing")
+			return
+		}
+
+		reporter := &testingReporter{
+			driver: d,
+			done:   done,
+		}
+		msw.fetch(reporter)
+	})
+}
+
 // Reporter implementation
+
+type reporter interface {
+	mb.PushReporter
+	StartFetchTimer()
+}
 
 // eventReporter implements the Reporter interface which is a callback interface
 // used by MetricSet implementations to report an event(s), an error, or an error
@@ -273,7 +301,7 @@ type eventReporter struct {
 
 // startFetchTimer demarcates the start of a new fetch. The elapsed time of a
 // fetch is computed based on the time of this call.
-func (r *eventReporter) startFetchTimer() {
+func (r *eventReporter) StartFetchTimer() {
 	r.start = time.Now()
 }
 
